--- a/main.html
+++ b/main.html
@@ -7,7 +7,13 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<ul>
+		<li>
+			<a href="https://en.wikipedia.org/wiki/Golden_Retriever">
+			<img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" height="200px"></a>
+		 </li>
+	<li><a href="https://en.wikipedia.org/wiki/Poodle"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg"height="200px"></a>
+	</li>
     <script type="text/javascript" src="./script.js">
 </script>
 
